# tannhauser

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/tannhauser/: __init__.py  controller.py  piano.py  piano_ui.py  sc.py  sc_boot.scd  synth.py  utils.py
tests/: __init__.py  conftest.py  test_controller.py  test_sc.py  test_synth.py  test_utils.py
