[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tannhauser"
version = "0.1.0"
description = "Abstract synthesizer control library for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutils>=3.3.11",
    "pynput>=1.8.1",
    "python-osc>=1.9.3",
]
