[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tannhauser"
version = "0.1.0"
description = "Abstract synthesizer control library for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
    "pynput>=1.8.1",
    "python-osc>=1.9.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config"]
