[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tannhauser"
version = "0.1.0"
description = "Abstract synthesizer control library for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psutil>=7.2.2", "pynput>=1.8.1", "python-osc>=1.9.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/tannhauser"]

[tool.hatch.build.targets.wheel.force-include]
"src/tannhauser/py.typed" = "tannhauser/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config"]
